[tool.poetry]
name = "python-project-base"
version = "0.1.0"
description = ""
authors = ["nomura.koshiro <nomura.koshiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# TODO 以下の内容は【かなり】見直す必要あり
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "ALL", 
]
ignore = [
    "D",    # Docstringを書かなくてもよいようにする
    "T201", # 'print()'を使えるようにする
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from err
]
fixable = ["ALL"]
target-version = "py39"

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]